update config file

--- a/config.toml
+++ b/config.toml
@@ -32,7 +32,7 @@ publishDir = "docs"
   archive = "archives"
 
 [author]
-  name = "刀心の水 Nzo"
+  name = "刀心の水"
   bio = "虚度廿余岁月浅，略识几行代码源。\t\n闲来随手快门按，黯然独把音韵弹。\n\nI'm a software developer who loves producing music and photography."
   job = "Software Developer"
   location = "New York City"
@@ -172,7 +172,7 @@ publishDir = "docs"
   # If false it will flat categories.
   hierarchicalCategories = true
 
-  description = "刀心の水Nzo浪费时间の地方"
+  description = "刀心の水发呆の地方"
 
   # Customization
   # Define the behavior of the sidebar
