--- a/config.toml
+++ b/config.toml
@@ -12,6 +12,7 @@
 # For developpers, if you modify this theme, put your images in `source/images` folder and
 # use grunt task `build` to synchronize assets
 
+publishDir = "docs"
 baseURL = "http://Nianze.github.io/"
 languageCode = "zh-cn"
 defaultContentLanguage = "zh-cn"
@@ -21,10 +22,9 @@ disqusShortname = "daoxinzhishui"
 googleAnalytics = "UA-71584380-1"
 paginate = 7
 canonifyurls = true
-publishDir = "docs"
 
 [permalinks]
-  post = "/post/:slug/"
+  post = "/:year/:month/:slug/"
 
 [taxonomies]
   tag = "tags"
