--- a/config.toml
+++ b/config.toml
@@ -13,7 +13,7 @@
 # use grunt task `build` to synchronize assets
 
 publishDir = "docs"
-baseURL = "http://Nianze.github.io/"
+baseURL = "http://nianze.ml/"
 languageCode = "zh-cn"
 defaultContentLanguage = "zh-cn"
 title = "Coding|Music|Photography"
