--- a/config.toml
+++ b/config.toml
@@ -194,7 +194,7 @@ canonifyurls = true
   # Current image is on AWS S3 and delivered by AWS CloudFront.
   # Otherwise put your image in folder `static/_images/` (development)  or in `source/assets/images/` if you can't or don't want to build the theme,
   # and use relative url : `your-image.png`
-  coverImage = "https://farm5.staticflickr.com/4598/38533578054_055eff3b64_o.jpg"
+  coverImage = "/cover-v1.2.0.jpg"
 
   # Display an image gallery at the end of a post which have photos variables (false: disabled, true: enabled)
   imageGallery = true
