--- a/config.toml
+++ b/config.toml
@@ -15,7 +15,7 @@
 baseURL = "http://nianze.ml/"
 languageCode = "zh-cn"
 defaultContentLanguage = "zh-cn"
-title = "Coding|Music|Photography"
+title = "Code.Music.Photography"
 theme = "tranquilpeak"
 disqusShortname = "daoxinzhishui"
 googleAnalytics = "UA-71584380-1"
@@ -31,7 +31,7 @@ canonifyurls = true
   archive = "archives"
 
 [author]
-  name = "刀心の水"
+  name = "刀心の水|Nzo"
   bio = "虚度廿余岁月浅，略识几行代码源。\t\n闲来随手快门按，黯然独把音韵弹。\n\nI'm a software developer who loves producing music and photography."
   job = "Software Developer"
   location = "New York City"
