--- a/config.toml
+++ b/config.toml
@@ -15,7 +15,7 @@
 baseURL = "http://nianze.ml/"
 languageCode = "zh-cn"
 defaultContentLanguage = "zh-cn"
-title = "Code.Music.Photography"
+title = "Code.Music.Photo"
 theme = "tranquilpeak"
 disqusShortname = "daoxinzhishui"
 googleAnalytics = "UA-71584380-1"
