new posts on music

--- a/config.toml
+++ b/config.toml
@@ -171,7 +171,7 @@ canonifyurls = true
   # If false it will flat categories.
   hierarchicalCategories = true
 
-  description = "刀心の水发呆の地方"
+  description = "刀心の水写字の地方"
 
   # Customization
   # Define the behavior of the sidebar
