--- a/config.toml
+++ b/config.toml
@@ -13,8 +13,8 @@
 # use grunt task `build` to synchronize assets
 
 baseURL = "http://nianze.ml/"
-languageCode = "zh-cn"
-defaultContentLanguage = "zh-cn"
+languageCode = "en-us"
+defaultContentLanguage = "en-us"
 title = "Code.Music.Photo"
 theme = "tranquilpeak"
 disqusShortname = "daoxinzhishui"
