--- a/config.toml
+++ b/config.toml
@@ -32,7 +32,7 @@ canonifyurls = true
 
 [author]
   name = "刀心の水|Nzo"
-  bio = "虚度廿余岁月浅，略识几行代码源。\t\n闲来随手快门按，黯然独把音韵弹。\n\nA software developer who also love producing music and taking photo."
+  bio = "虚度廿余岁月浅，略识几行代码源。\t\n闲来随手快门按，黯然独把音韵弹。\n\nA software developer who also love producing music and taking photos."
   job = "Software Developer"
   location = "New York City"
   # Your Gravatar email. Overwrite `author.picture` everywhere in the blog
