--- a/config.toml
+++ b/config.toml
@@ -12,7 +12,7 @@
 # For developpers, if you modify this theme, put your images in `source/images` folder and
 # use grunt task `build` to synchronize assets
 
-baseURL = "http://nianze.ml/"
+baseURL = "https://nianze.github.io/personal-site/"
 languageCode = "en-us"
 defaultContentLanguage = "en-us"
 title = "Code.Music.Photo"
