--- a/config.toml
+++ b/config.toml
@@ -39,7 +39,7 @@ canonifyurls = true
   # gravatarEmail = "daoxinzhishui@gmail.com"
   # Your profile picture
   # Overwritten by your gravatar image if `author.gravatarEmail` is filled
-  picture = "/images/bio-picture.jpg"
+  picture = "/images/bio-picture.png"
   # Your Twitter username without the @. E.g : thibaudlepretre
   # twitter = "daoxinzhishui"
   # Your google plus profile id. E.g : +ThibaudLepretre or 114625208755123718311
