update to use awesome font 5

--- a/config.toml
+++ b/config.toml
@@ -50,104 +50,110 @@ canonifyurls = true
   weight = 1 
   identifier = "home"
   name = "Home"
-  pre = "<i class=\"sidebar-button-icon fa fa-lg fa-home\" title='Home'></i>"
+  pre = "<i class=\"sidebar-button-icon fas fa-home\" title='Home'></i>"
   url = "/"
 [[menu.main]]
   weight = 2 
   identifier = "technology"
   name = "Technology"
-  pre = "<i class=\"sidebar-button-icon fa fa-lg fa-code\" title='Technology'></i>"
+  pre = "<i class=\"sidebar-button-icon fas fa-code\" title='Technology'></i>"
   url = "/categories/technology"
 [[menu.main]]
   weight = 3 
   identifier = "music"
   name = "Music"
-  pre = "<i class=\"sidebar-button-icon fa fa-lg fa-music\" title='Music'></i>"
+  pre = "<i class=\"sidebar-button-icon fas fa-music\" title='Music'></i>"
   url = "/categories/music"
 [[menu.main]]
   weight = 4 
   identifier = "photography"
   name = "Photography"
-  pre = "<i class=\"sidebar-button-icon fa fa-lg fa-camera\" title='Photography'></i>"
+  pre = "<i class=\"sidebar-button-icon fas fa-camera-retro\" title='Photography'></i>"
   url = "/categories/photography"
+[[menu.main]]
+  weight = 4 
+  identifier = "thoughts"
+  name = "Thoughts"
+  pre = "<i class=\"sidebar-button-icon fas fa-lightbulb\" title='Thoughts'></i>"
+  url = "/categories/thoughts"
 [[menu.main]]
   weight = 5
   identifier = "categories"
   name = "Categories"
-  pre = "<i class=\"sidebar-button-icon fa fa-lg fa-bookmark\" title='Categories'></i>"
+  pre = "<i class=\"sidebar-button-icon fas fa-bookmark\" title='Categories'></i>"
   url = "/categories"
 [[menu.main]]
   weight = 6
   identifier = "tags"
   name = "Tags"
-  pre = "<i class=\"sidebar-button-icon fa fa-lg fa-tags\" title='Tags'></i>"
+  pre = "<i class=\"sidebar-button-icon fas fa-tags\" title='Tags'></i>"
   url = "/tags"
 [[menu.main]]
   weight = 7
   identifier = "archives"
   name = "Archives"
-  pre = "<i class=\"sidebar-button-icon fa fa-lg fa-archive\" title='Archives'></i>"
+  pre = "<i class=\"sidebar-button-icon fas fa-archive\" title='Archives'></i>"
   url = "/archives"
 [[menu.main]]
   weight = 8
   identifier = "about"
   name = "About"
-  pre = "<i class=\"sidebar-button-icon fa fa-lg fa-user\" title='About'></i>"
+  pre = "<i class=\"sidebar-button-icon fas fa-user\" title='About'></i>"
   url = "/about"
 
 [[menu.links]]
   weight = 1
   identifier = "linkedin"
   name = "LinkedIn"
-  pre = "<i class=\"sidebar-button-icon fa fa-lg fa-linkedin\" title='LinkedIn'></i>"
+  pre = "<i class=\"sidebar-button-icon fab fa-linkedin\" title='LinkedIn'></i>"
   url = "https://www.linkedin.com/in/nianze"
 [[menu.links]]
   weight = 2
   identifier = "github"
   name = "GitHub"
-  pre = "<i class=\"sidebar-button-icon fa fa-lg fa-github\" title='Github'></i>"
+  pre = "<i class=\"sidebar-button-icon fab fa-github\" title='Github'></i>"
   url = "https://github.com/Nianze"
 [[menu.links]]
   weight = 3
   identifier = "flickr"
   name = "Flickr"
-  pre = "<i class=\"sidebar-button-icon fa fa-lg fa-flickr\", title='Flickr'></i>"
+  pre = "<i class=\"sidebar-button-icon fab fa-flickr\", title='Flickr'></i>"
   url = "https://www.flickr.com/photos/129774362@N07/"
 [[menu.links]]
   weight = 4
   identifier = "instagram"
   name = "Instagram"
-  pre = "<i class=\"sidebar-button-icon fa fa-lg fa-instagram\" title='Instagram'></i>"
+  pre = "<i class=\"sidebar-button-icon fab fa-instagram\" title='Instagram'></i>"
   url = "https://instagram.com/eznain"
 [[menu.links]]
   weight = 5
   identifier = "facebook"
   name = "Facebook"
-  pre = "<i class=\"sidebar-button-icon fa fa-lg fa-facebook\", title='Facebook'></i>"
+  pre = "<i class=\"sidebar-button-icon fab fa-facebook\", title='Facebook'></i>"
   url = "https://www.facebook.com/rym.lnz"
-#[[menu.links]]
-#  weight = 6
-#  identifier = "twitter"
-#  name = "Twitter"
-#  pre = "<i class=\"sidebar-button-icon fa fa-lg fa-twitter\", title='Twitter'></i>"
-#  url = "https://twitter.com/daoxinzhishui"
 [[menu.links]]
-  weight = 7
-  identifier = "youtube"
-  name = "YouTube"
-  pre = "<i class=\"sidebar-button-icon fa fa-lg fa-youtube\", title='YouTube'></i>"
-  url = "https://www.youtube.com/user/daoxinzhishui"
+ weight = 6
+ identifier = "twitter"
+ name = "Twitter"
+ pre = "<i class=\"sidebar-button-icon fab fa-twitter\", title='Twitter'></i>"
+ url = "https://twitter.com/daoxinzhishui"
 [[menu.links]]
   weight = 8
   identifier = "weibo"
   name = "Weibo"
-  pre = "<i class=\"sidebar-button-icon fa fa-lg fa-weibo\", title='Weibo'></i>"
-  url = "http://weibo.com/daoxinzhishui"
+  pre = "<i class=\"sidebar-button-icon fab fa-weibo\", title='Weibo'></i>"
+  url = "http://weibo.com/daoxinzhishui" 
+[[menu.links]]
+  weight = 7
+  identifier = "youtube"
+  name = "YouTube"
+  pre = "<i class=\"sidebar-button-icon fab fa-youtube\", title='YouTube'></i>"
+  url = "https://www.youtube.com/user/daoxinzhishui"
 [[menu.links]]
   weight = 9
   identifier = "email"
   name = "Email"
-  pre = "<i class=\"sidebar-button-icon fa fa-lg fa-envelope\", title='Email'></i>"
+  pre = "<i class=\"sidebar-button-icon fas fa-envelope\", title='Email'></i>"
   url = "mailto:daoxinzhishui@gmail.com"
 
 [params]
@@ -158,7 +164,7 @@ canonifyurls = true
   # dateFormat = "2 January 2006"
 
   # Global keywords configuration. Following keywords will be add to every pages
-  keywords = ["programming", "photography", "music", "software", "blog"]
+  keywords = ["photography", "music", "technology", "blog"]
 
   # Syntax highlighter, possible choice between: "highlight.js" (recommanded) and "prism.js" (experimental)
   # You can comment it to disable syntax highlighting
@@ -243,7 +249,7 @@ canonifyurls = true
   # Tranquilpeak configuration > Theme configuration > sharing-options
   [[params.sharingOptions]]
     name = "Facebook"
-    icon = "fa-facebook-official"
+    icon = "fa-facebook-f"
     url = "https://www.facebook.com/sharer/sharer.php?u=%s"
 
   [[params.sharingOptions]]
@@ -253,7 +259,7 @@ canonifyurls = true
 
   [[params.sharingOptions]]
     name = "Google+"
-    icon = "fa-google-plus"
+    icon = "fa-google-plus-g"
     url = "https://plus.google.com/share?url=%s"
 
   [params.header.rightLink]
