update about card

--- a/config.toml
+++ b/config.toml
@@ -33,8 +33,8 @@ canonifyurls = true
 [author]
   name = "刀心の水|Nzo"
   bio = "虚度廿余岁月浅，略识几行代码源。\t\n闲来随手快门按，黯然独把音韵弹。\n\nPain is inevitable. \t\nSuffering is optional."
-  job = "Software Developer"
-  location = "New York City"
+  job = "Developer"
+  location = "New York"
   # Your Gravatar email. Overwrite `author.picture` everywhere in the blog
   # gravatarEmail = "daoxinzhishui@gmail.com"
   # Your profile picture
