add loading animation

--- a/config.toml
+++ b/config.toml
@@ -232,12 +232,13 @@ canonifyurls = true
   # they have to be referred from static root. Example
   # [[params.customCSS]]
   #   href = "css/mystyle.css"
-  customCSS = ["css/main.css"]
+  customCSS = ["css/main.css", "css/loader.css"]
 
   # Custom JS. Put here your custom JS files. They are loaded after the theme JS;
   # they have to be referred from static root. Example
   # [[params.customJS]]
   #   src = "js/myscript.js"
+  customJS = ["js/loader.js"]
 
   # Display `Next` on left side of the pagination, and `Prev` on right side one.
   # If you set this value to `true`, these positions swap.
