--- a/config.toml
+++ b/config.toml
@@ -17,7 +17,6 @@ languageCode = "en-us"
 defaultContentLanguage = "en-us"
 title = "To be creative"
 theme = "tranquilpeak"
-disqusShortname = "daoxinzhishui"
 googleAnalytics = "UA-71584380-1"
 paginate = 7
 canonifyurls = true
@@ -267,6 +266,12 @@ canonifyurls = true
     class = ""
     icon = ""
     url = "/#about"
+
+  [params.utteranc] # utteranc is a comment system based on GitHub issues. see https://utteranc.es
+    enable = true
+    repo = "Nianze/personal-site-comments"
+    label = "✨comment 💬"
+    issueTerm = "pathname"
 
   # Customize link of author avatar in sidebar
   # [params.sidebar.profile]
