--- a/config.toml
+++ b/config.toml
@@ -18,7 +18,7 @@ defaultContentLanguage = "en-us"
 title = "To be creative"
 theme = "tranquilpeak"
 googleAnalytics = "UA-71584380-1"
-paginate = 7
+paginate = 10
 canonifyurls = true
 
 [permalinks]
@@ -52,6 +52,12 @@ canonifyurls = true
   pre = "<i class=\"sidebar-button-icon fas fa-home\" title='Home'></i>"
   url = "/"
 [[menu.main]]
+  weight = 1 
+  identifier = "thoughts"
+  name = "Thoughts"
+  pre = "<i class=\"sidebar-button-icon fas fa-lightbulb\" title='Thoughts'></i>"
+  url = "/categories/thoughts"
+[[menu.main]]
   weight = 2 
   identifier = "technology"
   name = "Technology"
@@ -65,16 +71,10 @@ canonifyurls = true
   url = "/categories/music"
 [[menu.main]]
   weight = 4 
-  identifier = "photography"
-  name = "Photography"
-  pre = "<i class=\"sidebar-button-icon fas fa-camera-retro\" title='Photography'></i>"
-  url = "/categories/photography"
-[[menu.main]]
-  weight = 4 
-  identifier = "thoughts"
-  name = "Thoughts"
-  pre = "<i class=\"sidebar-button-icon fas fa-lightbulb\" title='Thoughts'></i>"
-  url = "/categories/thoughts"
+  identifier = "visual"
+  name = "Visual"
+  pre = "<i class=\"sidebar-button-icon fas fa-palette\" title='Visual'></i>"
+  url = "/categories/visual"
 [[menu.main]]
   weight = 5
   identifier = "categories"
@@ -163,7 +163,7 @@ canonifyurls = true
   # dateFormat = "2 January 2006"
 
   # Global keywords configuration. Following keywords will be add to every pages
-  keywords = ["photography", "music", "technology", "blog"]
+  keywords = ["visual", "music", "technology"]
 
   # Syntax highlighter, possible choice between: "highlight.js" (recommanded) and "prism.js" (experimental)
   # You can comment it to disable syntax highlighting
