--- a/config.toml
+++ b/config.toml
@@ -30,7 +30,7 @@ canonifyurls = true
   archive = "archives"
 
 [author]
-  name = "刀心の水|Nzo"
+  name = "刀心の水"
   bio = "虚度廿余岁月浅，略识几行代码源。\t\n闲来随手快门按，黯然独把音韵弹。\n\nPain is inevitable. \t\nSuffering is optional."
   job = "Developer"
   location = "New York"
@@ -38,7 +38,7 @@ canonifyurls = true
   # gravatarEmail = "daoxinzhishui@gmail.com"
   # Your profile picture
   # Overwritten by your gravatar image if `author.gravatarEmail` is filled
-  picture = "/images/bio-picture.png"
+  picture = "/images/cut.PNG"
   # Your Twitter username without the @. E.g : thibaudlepretre
   # twitter = "daoxinzhishui"
   # Your google plus profile id. E.g : +ThibaudLepretre or 114625208755123718311
@@ -176,7 +176,7 @@ canonifyurls = true
   # If false it will flat categories.
   hierarchicalCategories = true
 
-  description = "刀心の水写字の地方"
+  description = "刀心水发呆の地方"
 
   # Customization
   # Define the behavior of the sidebar
@@ -199,7 +199,7 @@ canonifyurls = true
   # Current image is on AWS S3 and delivered by AWS CloudFront.
   # Otherwise put your image in folder `static/_images/` (development)  or in `source/assets/images/` if you can't or don't want to build the theme,
   # and use relative url : `your-image.png`
-  coverImage = "/cover-v1.jpg"
+  coverImage = "/city_silhouette.jpg"
 
   # Display an image gallery at the end of a post which have photos variables (false: disabled, true: enabled)
   imageGallery = true
@@ -209,12 +209,12 @@ canonifyurls = true
   # Display thumbnail image at the right of title in index pages (`right`, `left` or `bottom`)
   # Set this value to `right` if you have old posts to keep the old style on them
   # and define `thumbnailImagePosition` on a post to overwrite this setting
-  thumbnailImagePosition = "bottom"
+  thumbnailImagePosition = "right"
   # Automatically select the cover image or the first photo from the gallery of a post if there is no thumbnail image as the thumbnail image
   # Set this value to `true` if you have old posts that use the cover image or the first photo as the thumbnail image
 
   # and set `autoThumbnailImage` to `false` on a post to overwrite this setting
-  autoThumbnailImage = true
+  autoThumbnailImage = false
 
   # Your favicon path, default is "/favicon.png"
   favicon = "/favicon.png"
