--- a/config.toml
+++ b/config.toml
@@ -1,21 +1,7 @@
-# Tranquilpeak
-# Version : 0.3.1-BETA
-# Author : Thibaud Leprêtre
-
-# I STRONGLY recommend you to use a CDN to speed up loading of pages.
-# There is many free CDN like Cloudinary or you can also use indirectly
-# by using services like Google Photos.
-
-# If you want to store images yourself, please read this guidelines:
-# For users, if you only use this theme, put your images directly in `source/assets/images` folder
-# But if you want to add local images, you can put your images directly in `source/assets/images` folder
-# For developpers, if you modify this theme, put your images in `source/images` folder and
-# use grunt task `build` to synchronize assets
-
 baseURL = "http://nianze.tk"
 languageCode = "en-us"
 defaultContentLanguage = "en-us"
-title = "To be creative"
+title = "Be creative"
 theme = "tranquilpeak"
 googleAnalytics = "UA-71584380-1"
 paginate = 6
@@ -31,7 +17,7 @@ canonifyurls = true
 
 [author]
   name = "刀心の水"
-  bio = "虚度廿余岁月浅，略识几行代码源。\t\n闲来随手快门按，黯然独把音韵弹。\n\nPain is inevitable. \t\nSuffering is optional."
+  bio = "虚度廿余岁月浅，略识几行代码源。\t\n闲来随手快门按，怆然独把音韵弹。\n\nPain is inevitable. \t\nSuffering is optional."
   job = "Developer"
   location = "New York"
   # Your Gravatar email. Overwrite `author.picture` everywhere in the blog
