update rss link

--- a/config.toml
+++ b/config.toml
@@ -130,16 +130,16 @@ canonifyurls = true
   url = "https://www.youtube.com/user/daoxinzhishui" 
 [[menu.links]]
   weight = 8
-  identifier = "weibo"
-  name = "Weibo"
-  pre = "<i class=\"sidebar-button-icon fab fa-weibo\", title='Weibo'></i>"
-  url = "http://weibo.com/daoxinzhishui" 
-[[menu.links]]
-  weight = 9
   identifier = "email"
   name = "Email"
   pre = "<i class=\"sidebar-button-icon fas fa-envelope\", title='Email'></i>"
   url = "mailto:daoxinzhishui@gmail.com"
+[[menu.links]]
+  weight = 9
+  identifier = "rss"
+  name = "RSS"
+  pre = "<i class=\"sidebar-button-icon fas fa-rss-square\", title='RSS'></i>"
+  url = "/index.xml" 
 
 [params]
   # Customize date format use to render blog post date, categories and other
