compliant with hugo 0.60

--- a/config.toml
+++ b/config.toml
@@ -17,7 +17,7 @@ canonifyurls = true
 
 [author]
   name = "刀心の水"
-  bio = "虚度廿余岁月浅，略识几行代码源。\t\n闲来随手快门按，怆然独把音韵弹。\n\nPain is inevitable. \t\nSuffering is optional."
+  bio = "虚度廿余岁月浅，略识几行代码源。\n\n闲来随手快门按，怆然独把音韵弹。\n\nPain is inevitable. \t\nSuffering is optional."
   job = "Developer"
   location = "New York"
   # Your Gravatar email. Overwrite `author.picture` everywhere in the blog
@@ -262,3 +262,6 @@ canonifyurls = true
   # Customize link of author avatar in sidebar
   # [params.sidebar.profile]
   #   url = "/#about"
+
+  [markup.goldmark.renderer]
+    unsafe = true
