compatible with hugo 0.60; new post; new selfie

--- a/config.toml
+++ b/config.toml
@@ -17,14 +17,14 @@ canonifyurls = true
 
 [author]
   name = "刀心の水"
-  bio = "虚度廿余岁月浅，略识几行代码源。\n\n闲来随手快门按，怆然独把音韵弹。\n\nPain is inevitable. \t\nSuffering is optional."
+  bio = "虚度廿余岁月浅，略识几行代码源。\t\n闲来随手快门按，怆然独把音韵弹。\n\nPain is inevitable. \t\nSuffering is optional."
   job = "Developer"
   location = "New York"
   # Your Gravatar email. Overwrite `author.picture` everywhere in the blog
   # gravatarEmail = "daoxinzhishui@gmail.com"
   # Your profile picture
   # Overwritten by your gravatar image if `author.gravatarEmail` is filled
-  picture = "/images/cut.PNG"
+  picture = "/images/bw.JPG"
   # Your Twitter username without the @. E.g : thibaudlepretre
   # twitter = "daoxinzhishui"
   # Your google plus profile id. E.g : +ThibaudLepretre or 114625208755123718311
@@ -139,7 +139,7 @@ canonifyurls = true
   identifier = "rss"
   name = "RSS"
   pre = "<i class=\"sidebar-button-icon fas fa-rss-square\", title='RSS'></i>"
-  url = "/index.xml" 
+  url = "/post/index.xml" 
 
 [params]
   # Customize date format use to render blog post date, categories and other
@@ -185,7 +185,7 @@ canonifyurls = true
   # Current image is on AWS S3 and delivered by AWS CloudFront.
   # Otherwise put your image in folder `static/_images/` (development)  or in `source/assets/images/` if you can't or don't want to build the theme,
   # and use relative url : `your-image.png`
-  coverImage = "/city_silhouette.jpg"
+  coverImage = "/reservoir.JPG"
 
   # Display an image gallery at the end of a post which have photos variables (false: disabled, true: enabled)
   imageGallery = true
@@ -265,3 +265,6 @@ canonifyurls = true
 
   [markup.goldmark.renderer]
     unsafe = true
+  
+  [markup]
+    defaultMarkdownHandler = "blackFriday"
