--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://nianze.tk"
+baseURL = "https://nianze.tk"
 languageCode = "en-us"
 defaultContentLanguage = "en-us"
 title = "Be creative"
@@ -24,7 +24,7 @@ canonifyurls = true
   # gravatarEmail = "daoxinzhishui@gmail.com"
   # Your profile picture
   # Overwritten by your gravatar image if `author.gravatarEmail` is filled
-  picture = "/images/profile/bw.JPG"
+  picture = "/images/bw.JPG"
   # Your Twitter username without the @. E.g : thibaudlepretre
   # twitter = "daoxinzhishui"
   # Your google plus profile id. E.g : +ThibaudLepretre or 114625208755123718311
@@ -185,7 +185,7 @@ canonifyurls = true
   # Current image is on AWS S3 and delivered by AWS CloudFront.
   # Otherwise put your image in folder `static/_images/` (development)  or in `source/assets/images/` if you can't or don't want to build the theme,
   # and use relative url : `your-image.png`
-  coverImage = "/images/profile/road.JPG"
+  coverImage = "road.JPG"
 
   # Display an image gallery at the end of a post which have photos variables (false: disabled, true: enabled)
   imageGallery = true
