--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseURL = "https://nianze.tk"
 languageCode = "en-us"
 defaultContentLanguage = "en-us"
-title = "Be creative"
+title = "刀心水敲字の地方"
 theme = "tranquilpeak"
 googleAnalytics = "UA-71584380-1"
 paginate = 6
