--- a/config.toml
+++ b/config.toml
@@ -203,7 +203,7 @@ canonifyurls = true
   autoThumbnailImage = false
 
   # Your favicon path, default is "/favicon.png"
-  favicon = "/favicon.png"
+  favicon = "/images/favicon.png"
 
   # Header configuration
   # The link at the right of the header is customizable
