--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -1,9 +1,9 @@
 logoText = "Nzo" # Logo text that appears in the site navigation bar.
-description = "虚度廿余岁月浅，略识几行代码源。闲来随手快门按，怆然独把音韵弹。" # for SEO
+description = "刀心水の胡言乱语" # for SEO
 custom_css = [] # custom_css = ["scss/custom.scss"] and then make file at root/assets/scss/custom.scss
 custom_js = [] # custom_js = ["js/custom.js"] and then make file at root/assets/js/custom.js
 
-themeOptions = ["dark", "light", "hacker", "solarized", "custom"] # select options for site color theme
+themeOptions = ["dark", "light", "hacker", "solarized"] # select options for site color theme
 notAllowedTypesInHome = ["contact", "talks", "about"] # not allowed page types in home page. type can be set in front matter or default to folder name.
 
 # header
@@ -29,11 +29,11 @@ talksGroupByDate = "2006" # "2006-01": group by month, "2006": group by year
 # whoami: usage - home page sidebar, single page bottom of post. all values can be empty
 myname = "刀心水"
 email = "daoxinzhishui@gmail.com"
-whoami = "Software Developer"
-useGravatar = false
+whoami = "「虚度廿余岁月浅，略识几行代码源。闲来随手快门按，怆然独把音韵弹。」"
+useGravatar = true
 location = "New York, US"
 organization = ""
-link = "https://github.com/nianze"
+link = ""
 
 # sidebar
 enableBio = true # home page sidebar
@@ -108,10 +108,10 @@ commento = false
   dataAttrs = "" # "data-isso='https://isso.example.com' data-isso-require-author='true'"
 
 [socialOptions] # if set, social icons will show up.
-  email = "mailto:daoxinzhishui@email.com"
+  email = ""
   facebook = "https://www.facebook.com/rym.lnz"
   twitter = ""
-  github = ""
+  github = "https://github.com/nianze"
   stack-overflow = ""
   instagram = "https://instagram.com/eznain"
   google-plus = ""
@@ -139,7 +139,7 @@ commento = false
   patreon = "" # Patreon URL
 
 [copyrightOptions]
-  enableCopyrightLink = false # if set, you can add copyright link
-  copyrightLink = ""
+  enableCopyrightLink = true # if set, you can add copyright link
+  copyrightLink = "http://creativecommons.org/licenses/by-sa/4.0/"
   copyrightLinkImage = ""
-  copyrightLinkText = ""
+  copyrightLinkText = "CC BY-SA"
