--- a/config/_default/params.en.toml
+++ b/config/_default/params.en.toml
@@ -1,5 +1,5 @@
 logoText = "Nzo" # Logo text that appears in the site navigation bar.
-description = "刀心水の胡言乱语" # for SEO
+description = "Nzo's Blog" # for SEO
 custom_css = [] # custom_css = ["scss/custom.scss"] and then make file at root/assets/scss/custom.scss
 custom_js = [] # custom_js = ["js/custom.js"] and then make file at root/assets/js/custom.js
 
@@ -27,9 +27,9 @@ talksPaginate = 8 # items per page
 talksGroupByDate = "2006" # "2006-01": group by month, "2006": group by year
 
 # whoami: usage - home page sidebar, single page bottom of post. all values can be empty
-myname = "刀心水"
+myname = "Nzo"
 email = "daoxinzhishui@gmail.com"
-whoami = "「虚度廿余岁月浅，略识几行代码源。闲来随手快门按，怆然独把音韵弹。」"
+whoami = "Pain is inevitable. Suffering is optional."
 useGravatar = true
 location = "New York, US"
 organization = ""
