--- a/config/_default/params.en.toml
+++ b/config/_default/params.en.toml
@@ -3,7 +3,7 @@ description = "Nzo's Blog" # for SEO
 custom_css = [] # custom_css = ["scss/custom.scss"] and then make file at root/assets/scss/custom.scss
 custom_js = [] # custom_js = ["js/custom.js"] and then make file at root/assets/js/custom.js
 
-themeOptions = ["dark", "light", "hacker", "solarized"] # select options for site color theme
+themeOptions = ["dark", "light", "hacker", "solarized", "kimbie"] # select options for site color theme
 notAllowedTypesInHome = ["contact", "talks", "about"] # not allowed page types in home page. type can be set in front matter or default to folder name.
 
 # header
