--- a/config/_default/params.zh.toml
+++ b/config/_default/params.zh.toml
@@ -31,7 +31,7 @@ useFaviconGenerator = true
 myname = "刀心水"
 email = "daoxinzhishui@gmail.com"
 whoami = "「虚度廿余岁月浅，略识几行代码源。闲来随手快门按，怆然独把音韵弹。」"
-useGravatar = true
+useGravatar = false
 location = "美国 纽约"
 organization = ""
 link = ""
