--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -1,39 +1,39 @@
 [[main]]
   identifier = "posts"
-  name = "posts"
+  name = "Posts"
   url = "posts"
   weight = 1
 
 [[main]]
   identifier = "notes"
-  name = "notes"
+  name = "Notes"
   url = "notes"
   weight = 2
 
 [[main]]
   identifier = "gallery"
-  name = "gallery"
+  name = "Galleries"
   url = "gallery"
   weight = 3
     
 [[main]]
   parent = "gallery"
-  name = "digital"
+  name = "Digital"
   url = "gallery/digital"
 
 [[main]]
   parent = "gallery"
-  name = "film"
+  name = "Film"
   url = "gallery/film"
 
 [[main]]
-  identifier = "archive"
-  name = "archive"
-  url = "archive"
+  identifier = "archives"
+  name = "Archives"
+  url = "archives"
   weight = 4
 
 [[main]]
   identifier = "about"
-  name = "about"
+  name = "About"
   url = "about"
   weight = 5
