--- a/config/_default/menus.zh.toml
+++ b/config/_default/menus.zh.toml
@@ -27,9 +27,9 @@
   url = "gallery/film"
 
 [[main]]
-  identifier = "archive"
+  identifier = "archives"
   name = "归档"
-  url = "archive"
+  url = "archives"
   weight = 4
 
 [[main]]
