--- a/config/_default/params.en.toml
+++ b/config/_default/params.en.toml
@@ -42,9 +42,16 @@ enableSidebar = true # Set to false to create the full width of the content.
 enableSidebarTags = true # if you want to use tags.
 enableSidebarSeries = true
 enableSidebarCategories = true
+enableHomeSidebarTitles = true
+enableListSidebarTitles = true
 enableToc = true # single page table of contents, you can replace this param to toc(toc = true)
 hideToc = false # Hide or Show toc
+tocFolding = true
+tocPosition = "inner" # inner, outer
 enableTocSwitch = true # single page table of contents visibility switch
+sidebarPosition = "right"
+tocLevels = ["h1", "h2", "h3", "h4"]
+enableSidebarPostsByOrder = false
 itemsPerCategory = 5 # maximum number of posts shown in the sidebar.
 
 # footer
@@ -132,10 +139,10 @@ commento = false
   jianshu = ""
 
 [donationOptions] 
-  enable = false # if set, the donation button will show up on the single page.
-  alipay = "" # Alipay QR Code image (example path: images/donation/alipay-qrcode.png) and put your file at root/static/images/donation/
-  wechat = "" # Wechat pay QR Code image (example path: same as above)
-  paypal = "" # Paypal URL
+  enable = true # if set, the donation button will show up on the single page.
+  alipay = "images/donation/alipay_qrcode.JPG" # Alipay QR Code image (example path: images/donation/alipay-qrcode.png) and put your file at root/static/images/donation/
+  wechat = "images/donation/wechatpay_qrcode.JPG" # Wechat pay QR Code image (example path: same as above)
+  paypal = "https://paypal.me/Nianze" # Paypal URL
   patreon = "" # Patreon URL
 
 [copyrightOptions]
@@ -143,3 +150,19 @@ commento = false
   copyrightLink = "http://creativecommons.org/licenses/by-sa/4.0/"
   copyrightLinkImage = ""
   copyrightLinkText = " CC BY-SA"
+
+# possible share name: ["facebook","twitter", "reddit", "linkedin", "tumblr", "weibo", "douban", "line"]
+#[[share]]
+#  name = "facebook"
+[[share]]
+  name = "twitter"
+[[share]]
+  name = "linkedin"
+[[share]]
+  name = "tumblr"
+[[share]]
+  name = "reddit"
+[[share]]
+  name = "weibo"
+[[share]]
+  name = "douban"
