--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://nianze.ml/" # The URL of your site.
+baseURL = "https://nianze.github.io/" # The URL of your site.
 title = "刀心水の胡言乱语" # Title of your site
 theme = "zzo" # Name of Zzo theme folder in `themes/`.
 
