--- a/config/_default/params.zh.toml
+++ b/config/_default/params.zh.toml
@@ -6,6 +6,12 @@ custom_js = [] # custom_js = ["js/custom.js"] and then make file at root/assets/
 themeOptions = ["dark", "light", "hacker", "solarized", "kimbie"] # select options for site color theme
 notAllowedTypesInHome = ["contact", "talks", "about"] # not allowed page types in home page. type can be set in front matter or default to folder name.
 
+viewportSize = "wide" # widest, wider, wide, normal, narrow
+enableUiAnimation = true
+hideSingleContentsWhenJSDisabled = false
+enablePinnedPosts = true
+minItemsToShowInTagCloud = 1 # Minimum items to show in tag cloud
+
 # header
 homeHeaderType = "text" # text, img, slide
 
