--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -36,7 +36,7 @@ googleAnalytics = "UA-71584380-1"
 
 [outputs]
   page = ["HTML", "SearchIndex"]
-  home = ["HTML", "RSS", "SearchIndex"]
+  home = ["HTML", "RSS", "SearchIndex", "JSON"]
   section = ["HTML", "RSS", "SearchIndex"]
   taxonomyTerm = ["HTML", "RSS", "SearchIndex"]
   taxonomy = ["HTML", "RSS", "SearchIndex"]
@@ -52,3 +52,6 @@ googleAnalytics = "UA-71584380-1"
   category = "categories"
   tag = "tags"
   series = "series"
+
+[params]
+  enableSearch = true
