--- a/config/_default/params.en.toml
+++ b/config/_default/params.en.toml
@@ -36,7 +36,7 @@ useFaviconGenerator = true
 # whoami: usage - home page sidebar, single page bottom of post. all values can be empty
 myname = "Nzo"
 email = "daoxinzhishui@gmail.com"
-whoami = "Pain is inevitable. Suffering is optional."
+whoami = "Yo!"
 useGravatar = true
 location = "New York, US"
 organization = ""
