--- a/config/_default/params.zh.toml
+++ b/config/_default/params.zh.toml
@@ -36,7 +36,7 @@ useFaviconGenerator = true
 # whoami: usage - home page sidebar, single page bottom of post. all values can be empty
 myname = "刀心水"
 email = "daoxinzhishui@gmail.com"
-whoami = "「虚度廿余岁月浅，略识几行代码源。闲来随手快门按，怆然独把音韵弹。」"
+whoami = "「这里是油腻中年瞎BB的地方」"
 useGravatar = false
 location = "美国 纽约"
 organization = ""
