--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -12,8 +12,8 @@ buildFuture = true # if true, we can use future date for talks page
 copyright = "©{year}, All Rights Reserved" # copyright symbol: $copy; current year: {year}
 timeout = 10000
 enableEmoji = true
-paginate = 5 # Number of items per page in paginated lists.
-rssLimit = 100
+[pagination]
+  pagerSize = 5 # Number of items per page in paginated lists.
 
 enableGitInfo = false # When true, the modified date will appear on a summary and single page. Since GitHub info needs to be fetched, this feature will slow down to build depending on a page number you have
 googleAnalytics = "UA-71584380-1"
@@ -38,7 +38,6 @@ googleAnalytics = "UA-71584380-1"
   page = ["HTML", "SearchIndex"]
   home = ["HTML", "RSS", "SearchIndex", "JSON"]
   section = ["HTML", "RSS", "SearchIndex"]
-  taxonomyTerm = ["HTML", "RSS", "SearchIndex"]
   taxonomy = ["HTML", "RSS", "SearchIndex"]
 
 [outputFormats]
@@ -55,3 +54,4 @@ googleAnalytics = "UA-71584380-1"
 
 [params]
   enableSearch = true
+  rssLimit = 100
